<resources>
    <string name="app_name">StreetStallToys</string>
    <string name="screen_color">屏幕颜色</string>
    <string name="please_input_txt">请输入播放文字……</string>
    <string name="txt_color">文字颜色</string>
    <string name="screen_scroll">屏幕滚动</string>
    <string name="start_play">开始播放</string>
    <string name="exit">退出</string>
    <string name="slow_down">减慢</string>
    <string name="speed_up">加快</string>
    <string name="pick_color">选择颜色</string>
</resources>